Fixed overflow issue when using default credentials
Fixed sign in icon

--- a/src/WebComponents/Menu/menu.scss
+++ b/src/WebComponents/Menu/menu.scss
@@ -3,6 +3,7 @@
 :host {
     @include layout-vertical();
     @include noSelection();
+    overflow: hidden;
 
     --vi-menu-indent: 16px;
     --vi-menu--expand-width: 16em;
